--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # 核心依赖
-numpy>=1.24.0
+numpy<2.0.0
 torch>=2.0.0
 transformers>=4.36.0
 sentence-transformers>=2.2.0
@@ -15,10 +15,12 @@ faiss-cpu>=1.7.4    # 如果使用GPU，替换为 faiss-gpu
 #pymilvus>=2.3.0     # Milvus客户端
 
 # LLM客户端
-openai>=1.3.0       # OpenAI API
+openai               # OpenAI API
 #anthropic>=0.5.0    # Anthropic API
 
 # 工具库
 tqdm>=4.65.0        # 进度条
-pydantic>=2.0.0     # 数据验证
+pydantic            # 数据验证
 #loguru>=0.7.0       # 日志处理
+rank_bm25
+jieba
