--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ numpy<2.0.0
 torch>=2.0.0
 transformers>=4.36.0
 sentence-transformers>=2.2.0
+FlagEmbedding
 
 # 文档处理
 #python-docx>=0.8.11  # docx文件支持
