增加基于llama_index的markdown文件解析/分块实现，和相关测试

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # 核心依赖
 numpy<2.0.0
-torch>=2.0.0
-transformers>=4.36.0
+torch==2.3.1
+transformers==4.44.2
 sentence-transformers>=2.2.0
 FlagEmbedding
 
@@ -10,6 +10,7 @@ FlagEmbedding
 #PyPDF2>=3.0.0       # PDF文件支持
 #markdown>=3.4.0     # Markdown文件支持
 #beautifulsoup4>=4.12.0  # HTML文件支持
+llama-index==0.10.16
 
 # 向量存储
 faiss-cpu>=1.7.4    # 如果使用GPU，替换为 faiss-gpu
