--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,9 @@ torch==2.3.1
 transformers==4.44.2
 sentence-transformers>=2.2.0
 FlagEmbedding
+fastapi
+uvicorn
+python-multipart
 
 # 文档处理
 #python-docx>=0.8.11  # docx文件支持
